# rocm-examples

./: .clang-format  .gersemirc  .gitattributes  .gitignore  .gitlab-ci.yml  .markdownlint.yaml  CMakeLists.txt  LICENSE.md  Makefile  README.md  ROCm-Examples-Portable-VS2017.sln  ROCm-Examples-Portable-VS2019.sln  ROCm-Examples-Portable-VS2022.sln  ROCm-Examples-VS2017.sln  ROCm-Examples-VS2019.sln  ROCm-Examples-VS2022.sln  build_packages.sh  example.cpp
HIP-Basic/: CMakeLists.txt  Makefile  README.md
HIP-Basic/assembly_to_executable/: .gitignore  CMakeLists.txt  Makefile  README.md  assembly_to_executable_vs2017.sln  assembly_to_executable_vs2017.vcxproj  assembly_to_executable_vs2017.vcxproj.filters  assembly_to_executable_vs2019.sln  assembly_to_executable_vs2019.vcxproj  assembly_to_executable_vs2019.vcxproj.filters  assembly_to_executable_vs2022.sln  assembly_to_executable_vs2022.vcxproj  assembly_to_executable_vs2022.vcxproj.filters  hip_obj_gen.mcin  main.hip  main_gfx1030.s  main_gfx1100.s  main_gfx1101.s  main_gfx1102.s  main_gfx803.s  main_gfx900.s  main_gfx906.s  main_gfx908.s  main_gfx90a.s  main_gfx942.s
HIP-Basic/bandwidth/: .gitignore  CMakeLists.txt  Makefile  README.md  bandwidth_vs2017.sln  bandwidth_vs2017.vcxproj  bandwidth_vs2017.vcxproj.filters  bandwidth_vs2019.sln  bandwidth_vs2019.vcxproj  bandwidth_vs2019.vcxproj.filters  bandwidth_vs2022.sln  bandwidth_vs2022.vcxproj  bandwidth_vs2022.vcxproj.filters  main.hip
HIP-Basic/bit_extract/: .gitignore  CMakeLists.txt  Makefile  README.md  bit_extract_vs2017.sln  bit_extract_vs2017.vcxproj  bit_extract_vs2017.vcxproj.filters  bit_extract_vs2019.sln  bit_extract_vs2019.vcxproj  bit_extract_vs2019.vcxproj.filters  bit_extract_vs2022.sln  bit_extract_vs2022.vcxproj  bit_extract_vs2022.vcxproj.filters  main.hip
HIP-Basic/cooperative_groups/: .gitignore  CMakeLists.txt  Makefile  README.md  cooperative_groups_vs2017.sln  cooperative_groups_vs2017.vcxproj  cooperative_groups_vs2017.vcxproj.filters  cooperative_groups_vs2019.sln  cooperative_groups_vs2019.vcxproj  cooperative_groups_vs2019.vcxproj.filters  cooperative_groups_vs2022.sln  cooperative_groups_vs2022.vcxproj  cooperative_groups_vs2022.vcxproj.filters  main.hip
HIP-Basic/device_globals/: .gitignore  CMakeLists.txt  Makefile  README.md  device_globals_vs2017.sln  device_globals_vs2017.vcxproj  device_globals_vs2017.vcxproj.filters  device_globals_vs2019.sln  device_globals_vs2019.vcxproj  device_globals_vs2019.vcxproj.filters  device_globals_vs2022.sln  device_globals_vs2022.vcxproj  device_globals_vs2022.vcxproj.filters  main.hip
HIP-Basic/device_query/: .gitignore  CMakeLists.txt  Makefile  README.md  device_query_vs2017.sln  device_query_vs2017.vcxproj  device_query_vs2017.vcxproj.filters  device_query_vs2019.sln  device_query_vs2019.vcxproj  device_query_vs2019.vcxproj.filters  device_query_vs2022.sln  device_query_vs2022.vcxproj  device_query_vs2022.vcxproj.filters  main.cpp
HIP-Basic/dynamic_shared/: .gitignore  CMakeLists.txt  Makefile  README.md  dynamic_shared_vs2017.sln  dynamic_shared_vs2017.vcxproj  dynamic_shared_vs2017.vcxproj.filters  dynamic_shared_vs2019.sln  dynamic_shared_vs2019.vcxproj  dynamic_shared_vs2019.vcxproj.filters  dynamic_shared_vs2022.sln  dynamic_shared_vs2022.vcxproj  dynamic_shared_vs2022.vcxproj.filters  main.hip
HIP-Basic/events/: .gitignore  CMakeLists.txt  Makefile  README.md  events_vs2017.sln  events_vs2017.vcxproj  events_vs2017.vcxproj.filters  events_vs2019.sln  events_vs2019.vcxproj  events_vs2019.vcxproj.filters  events_vs2022.sln  events_vs2022.vcxproj  events_vs2022.vcxproj.filters  main.hip
HIP-Basic/gpu_arch/: .gitignore  CMakeLists.txt  Makefile  README.md  gpu_arch_vs2017.sln  gpu_arch_vs2017.vcxproj  gpu_arch_vs2017.vcxproj.filters  gpu_arch_vs2019.sln  gpu_arch_vs2019.vcxproj  gpu_arch_vs2019.vcxproj.filters  gpu_arch_vs2022.sln  gpu_arch_vs2022.vcxproj  gpu_arch_vs2022.vcxproj.filters  main.hip
HIP-Basic/hello_world/: .gitignore  CMakeLists.txt  Makefile  README.md  hello_world_vs2017.sln  hello_world_vs2017.vcxproj  hello_world_vs2017.vcxproj.filters  hello_world_vs2019.sln  hello_world_vs2019.vcxproj  hello_world_vs2019.vcxproj.filters  hello_world_vs2022.sln  hello_world_vs2022.vcxproj  hello_world_vs2022.vcxproj.filters  main.hip
HIP-Basic/hello_world_cuda/: CMakeLists.txt  README.md  main.hip
HIP-Basic/hipify/: .gitignore  CMakeLists.txt  Makefile  README.md  main.cu
HIP-Basic/inline_assembly/: .gitignore  CMakeLists.txt  Makefile  README.md  inline_assembly_vs2017.sln  inline_assembly_vs2017.vcxproj  inline_assembly_vs2017.vcxproj.filters  inline_assembly_vs2019.sln  inline_assembly_vs2019.vcxproj  inline_assembly_vs2019.vcxproj.filters  inline_assembly_vs2022.sln  inline_assembly_vs2022.vcxproj  inline_assembly_vs2022.vcxproj.filters  main.hip
HIP-Basic/llvm_ir_to_executable/: .gitignore  CMakeLists.txt  Makefile  README.md  hip_obj_gen.mcin  hip_obj_gen_win.mcin  llvm_ir_to_executable_vs2017.sln  llvm_ir_to_executable_vs2017.vcxproj  llvm_ir_to_executable_vs2017.vcxproj.filters  llvm_ir_to_executable_vs2019.sln  llvm_ir_to_executable_vs2019.vcxproj  llvm_ir_to_executable_vs2019.vcxproj.filters  llvm_ir_to_executable_vs2022.sln  llvm_ir_to_executable_vs2022.vcxproj  llvm_ir_to_executable_vs2022.vcxproj.filters  main-hip-amdgcn-amd-amdhsa-gfx1030.ll  main-hip-amdgcn-amd-amdhsa-gfx803.ll  main-hip-amdgcn-amd-amdhsa-gfx900.ll  main-hip-amdgcn-amd-amdhsa-gfx906.ll  main-hip-amdgcn-amd-amdhsa-gfx908.ll  main-hip-amdgcn-amd-amdhsa-gfx90a.ll  main.hip  main_gfx1030.ll  main_gfx1100.ll  main_gfx1101.ll  main_gfx1102.ll  main_gfx803.ll  main_gfx900.ll  main_gfx906.ll  main_gfx908.ll  main_gfx90a.ll
HIP-Basic/matrix_multiplication/: .gitignore  CMakeLists.txt  Makefile  README.md  argument_parsing.hpp  main.hip  matrix_multiplication_vs2017.sln  matrix_multiplication_vs2017.vcxproj  matrix_multiplication_vs2017.vcxproj.filters  matrix_multiplication_vs2019.sln  matrix_multiplication_vs2019.vcxproj  matrix_multiplication_vs2019.vcxproj.filters  matrix_multiplication_vs2022.sln  (+2 more)
(+1632 files in other folders)
